--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
   }
 
 
-.Movie_night{
+/* .Movie_night{
   align-self: center;
   display: grid;
   grid-template-columns: 1fr, 1fr;
@@ -28,4 +28,4 @@
     grid-row-end: 2; 
     margin-top: 10%;
 } 
-
+ */
