--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,13 @@
     margin: 0;
     height: 100%;
     width: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
   }
 
 
-.Movie_night{
+.Grid-img{
   align-self: center;
   display: grid;
-  grid-template-columns: 1fr, 1fr;
+  grid-template-columns: 1fr, 1fr, 1fr;
   grid-template-rows: 1fr, 1fr;
   width: 100%;
   height: 100%;
@@ -20,7 +18,7 @@
 }
 
 
-.films{
+.Images1{
   text-align: center;
     grid-column-start: 1;
     grid-column-end: 2;
@@ -28,4 +26,24 @@
     grid-row-end: 2; 
     margin-top: 10%;
 } 
+
+.Images2{
+  text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2; 
+    margin-top: 10%;
+} 
+
+
+.Images3{
+  text-align: center;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2; 
+    margin-top: 10%;
+} 
+
 
