--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
   }
 
 
-.Grid-img{
+/* .Grid-img{
   align-self: center;
   display: grid;
   grid-template-columns: 1fr, 1fr, 1fr;
@@ -44,7 +44,7 @@
     grid-row-start: 1;
     grid-row-end: 2; 
     margin-top: 10%;
-} 
+}  */
 
 
 
@@ -52,36 +52,133 @@
 
 
 /* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
+.row {
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr, 1fr, 1fr;
+  grid-template-rows: 1fr, 1fr 1fr;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(4, 50, 77);
 }
 
 /* Style the images inside the grid */
-.column img {
+.img1{
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+.img2{
+  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+.img3{
+  text-align: center;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+/* Style the images inside the grid */
+.img4{
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+.img5{
+  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+.img6{
+  text-align: center;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3; 
+  margin-top: 10%;
   opacity: 0.8; 
   cursor: pointer; 
 }
 
+.img7{
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+.img8{
+  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+.img9{
+  text-align: center;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4; 
+  margin-top: 10%;
+  opacity: 0.8; 
+  cursor: pointer; 
+}
+
+.container {
+   position: relative;
+   text-align: center;
+  /* display: none; */
+}
+ 
+
+/* 
 .column img:hover {
   opacity: 1;
 }
 
-/* Clear floats after the columns */
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* The expanding image container */
-.container {
-  position: relative;
-  display: none;
-}
 
-/* Expanding image text */
+
+
+
 #imgtext {
   position: absolute;
   bottom: 15px;
@@ -90,7 +187,7 @@
   font-size: 20px;
 }
 
-/* Closable button inside the expanded image */
+
 .closebtn {
   position: absolute;
   top: 10px;
@@ -99,5 +196,5 @@
   font-size: 35px;
   cursor: pointer;
 }
-
+ */
 
