--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,14 @@
    text-align: center;
   /* display: none; */
 }
- 
+ .closebtn {
+  position: absolute;
+  /* top: 10px;
+  right: 15px; */
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
 
 /* 
 .column img:hover {
@@ -188,13 +195,6 @@
 }
 
 
-.closebtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
-}
+
  */
 
