--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,52 +6,6 @@
     width: 100%;
   }
 
-  .mfp-s-loading .mfp-arrow { 
-    display: none;
- }
- 
-/* .Grid-img{
-  align-self: center;
-  display: grid;
-  grid-template-columns: 1fr, 1fr, 1fr;
-  grid-template-rows: 1fr, 1fr;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(4, 50, 77);
-}
-
-
-.Images1{
-  text-align: center;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2; 
-    margin-top: 10%;
-} 
-
-.Images2{
-  text-align: center;
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2; 
-    margin-top: 10%;
-} 
-
-
-.Images3{
-  text-align: center;
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2; 
-    margin-top: 10%;
-}  */
-
-
-
-
 /* The grid: Four equal columns that floats next to each other */
 .row {
   align-self: center;
@@ -127,6 +81,7 @@
 }
 
 .img7{
+  width: 100%;
   text-align: center;
   grid-column-start: 1;
   grid-column-end: 2;
@@ -158,19 +113,19 @@
 }
 
 .container {
-   position: fixed;
-   margin-top: -42%;
+   position: absolute;
+   margin-top: 10%;
    text-align: center;
   /* display: none; */
 }
- /* .closebtn {
-  position: absolute; */
-  /* top: 10px;
-  right: 15px; */
-  /* color: white;
+ .closebtn {
+  position: fixed; 
+  top: 10px;
+  right: 15px; 
+  color: white;
   font-size: 35px;
   cursor: pointer;
-} */
+} 
 
 /* 
 .column img:hover {
